# moz-fluent-linter

./: .gitignore  .pre-commit-hooks.yaml  README.md  setup.cfg
.github/: requirements.txt
.github/workflows/: linter.yml  tests.yml
src/fluent_linter/: config.yml  linter.py
tests/: test_banned_words.py  test_brands.py  test_comments.py  test_comments_variables.py  test_ids.py  test_junk.py  test_placeable_style.py  test_syntax.py  test_typography.py  test_variable_style.py
tests/test_files/: test_linter.ftl
