[metadata]
name = moz-fluent-linter
version = 0.3.4
author = Francesco Lodolo
author_email = flod@mozilla.com
description = Linter package used to check Fluent files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mozilla-l10n/moz-fluent-linter
project_urls =
    Bug Tracker = https://github.com/mozilla-l10n/moz-fluent-linter/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    fluent.syntax >=0.18.0, <0.19
    pyyaml
    six

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    moz-fluent-lint = fluent_linter.linter:main
